# opengl-skeletal-animation

./: CMakeLists.txt  README.md
assets/: Pushing.fbx
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/stb_image/: stb_image.cpp
shaders/: basic.frag.glsl  basic.vert.glsl  skeletal_animation.vert  textured.frag.glsl
src/: Conversions.h  Program.cpp  Program.h  TextureLoader.cpp  TextureLoader.h  Window.cpp  Window.h  main.cpp
src/animation/: AnimatedModelLoader.cpp  AnimatedModelLoader.h  Bone.cpp  Bone.h  Model.cpp  Model.h
src/models/: AnimatedModelLoader.cpp  AnimatedModelLoader.h  Conversions.cpp  Conversions.h  Mesh.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  TextureLoader.cpp  TextureLoader.h
src/models/animation/: Bone.cpp  Bone.h
src/renderer/: Renderer.cpp  Renderer.h
src/shader/: Shader.cpp  Shader.h
src/shapes/: Grid.h
